Task-003 + Fixing Scrollbar

--- a/apps/shell/src/app/app.component.scss
+++ b/apps/shell/src/app/app.component.scss
@@ -9,7 +9,7 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+* {
   font-family: inherit;
   line-height: inherit;
   margin: 0;
