--- a/apps/shell/src/styles.scss
+++ b/apps/shell/src/styles.scss
@@ -9,3 +9,18 @@
 //  tab-size: 4;
 //  scroll-behavior: smooth;
 //}
+
+//Scrollbar
+html::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+html::-webkit-scrollbar-track {
+  background: white;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+html::-webkit-scrollbar-thumb {
+  background: radial-gradient(#d21972, #2D51C1);
+  border: none;
+}
